# DailyCoding

./: .gitignore  .vimrc  DEPENDENCY_MAINTENANCE.md  README.md  hello_world.php  test.txt
Algospot/: mercy.cpp
BackToTheBasic/: README.md
BaekJoon/: 10170.cpp  10171.cpp  10172.cpp  10699.cpp  10817.cpp  10871.cpp  10886.cpp  10926.cpp  10950.cpp  10951.cpp  10952.cpp  10953.cpp  11021.cpp  11022.cpp  1110.cpp  11382.py  1152.cpp  11654.cpp  11718.cpp  11719.CPP  11720.cpp  11721.cpp  1330.cpp  13752.cpp  14681.py  14918.cpp  1546.cpp  1547.cpp  1550.cpp  15552.cpp  15680.cpp  15802.cpp  18108.py  1924.cpp  2163.cpp  2420.cpp  2439.cpp  2440.cpp  2441.cpp  2525.cpp  (+17 more)
Boost/: Client.cpp  boost_bind.cpp  chat_client.cpp  chat_message.hpp  chat_server.cpp  sync_timer.cpp  test.cpp
BrainCpp/: A.cpp  A.h  AddressOfVariables.cpp  AllTypeMaxFunction.cpp  AllTypeSmartPointer.cpp  ArrayLeftRotation.cpp  B.h  (+206 more)
software-design/patterns/Dependency Injection/signup-service-example/: README.md  main.py  pyproject.toml
software-design/patterns/Dependency Injection/signup-service-example/src/signup/: container.py
software-design/patterns/Dependency Injection/signup-service-example/src/signup/application/: ports.py  signup_service.py
software-design/patterns/Dependency Injection/signup-service-example/src/signup/domain/: user.py
software-design/patterns/Dependency Injection/signup-service-example/src/signup/infrastructure/: console_email_sender.py  in_memory_user_repository.py
software-design/patterns/Dependency Injection/signup-service-example/tests/: test_signup_service.py
(+1055 files in other folders)
