[project]
name = "signup-service-example"
version = "0.1.0"
description = "A small Dependency Injection example implemented with Python."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
